# tachyon

./: .gitignore  .gitmodules  Args.hs  Makefile  README.md  Syscall.hs  SyscallTable.hs  Trace.hs  TracerLoop.hs  TypedSyscalls.hs  Util.hs  cabal-dev-init.sh  default.nix  init.sh  shell.nix  tracebench.c  tracer.cabal  tracer.hs
src/: ATRandom.hs  Args.hs  Encoding.hs  Syscall.hs  SyscallTable.hs  Trace.hs  TracerLoop.hs  corediff.hs  tracer.hs
tests/hello/: Makefile  goodbye.c  hello.c
