Name:                tachyon
Version:             0.1
License:             MIT
Author:              Matthew Maurer
Maintainer:          maurer@matthewmaurer.org
Category:            System
Build-type:          Simple
Cabal-version:       >=1.2

Executable corediff
  Main-is: corediff.hs
  Hs-Source-Dirs: src
  Build-depends: base, binary, trace, containers, bytestring
Executable tracer
  Main-is: tracer.hs
  Hs-Source-Dirs: src
  Other-Modules: Syscall, Args, Encoding, SyscallTable, Trace, TracerLoop, TypedSyscalls, Util, ATRandom
  Build-depends: base, binary, trace, containers, bytestring, unix, split, transformers, stm, process, bounded-tchan
  Extensions: ScopedTypeVariables
--  GHC-options: -auto-all -rtsopts
